# zoomcamp-krish

./: .gitignore  README.md
week1/: README.md  docker-compose.yaml  ingest_data.py  main.tf  notebook.ipynb  pyproject.toml  terraform.tfstate  variable.tf
