[project]
name = "week1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary,pool]>=3.3.2",
    "pyarrow>=23.0.0",
    "sqlalchemy>=2.0.46",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "click>=8.3.1",
    "jupyter>=1.1.1",
]
